--- a/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=hello-spring
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:top://localhost/~/test
+spring.datasource.username=sa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
