--- a/servlet/build.gradle
+++ b/servlet/build.gradle
@@ -25,6 +25,12 @@ repositories {
 }
 
 dependencies {
+
+	//JSP 추가 시작
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	implementation 'javax.servlet:jstl:1.2'
+	//JSP 추가 끝
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
